# motionGraphicsEditor

./: .gitignore  CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: add_layer_popup.h  app_window.cpp  app_window.h  bottom_panel.cpp  bottom_panel.h  layer.h  main.cpp  project.h  scene.h  timeline.cpp  timeline.h  top_panel.cpp  top_panel.h
src/core/: audio_layer.h  circle_layer.h  color.h  layer.h  project.cpp  project.h  renderer.cpp  renderer.h  scene.h  shape_layer.h  shape_renderer.cpp  shape_renderer.h  time.h  timeline.cpp  timeline.h  transform.h  visual_layer.h
